@@ -2,9 +2,10 @@
 
 0.132 "FIXME"
  441859 in 0.131, 'read next unread' didn't always work (Artur Jachacy)
- 355041 Two-segment group name abbreviations (Benjamin Esham)
+ 456730 Text before signature delimiter is doubled (Alexander Skwar)
  444184 0.131 fails to build on RH4/CentOS4 (Steven Ellis)
  438021 can't post one message to multiple groups at one time (Keith)
+ 355041 Two-segment group name abbreviations (Benjamin Esham)
  447680 handle nzb files whose parts are in the wrong order (Benjamin Charron)
  349490 better info for the tool-tip of the Tasks button (Douglas Bollinger)
  456519 Dependency on gmime version should be 2.1.9, not 2.1.0 (Gregory Lee)
